--- a/Love/app/src/main/res/layout/activity_main.xml
+++ b/Love/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/home_container"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.love.MainActivity">
+
+    <com.huan.percy.backgroundvideotest.FullScreenVideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:autoLink="phone"
-        android:gravity="center"
+        android:gravity="center|bottom"
         android:hint="time"
+        android:padding="30dp"
         android:textColor="#F87461"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,4 +42,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.295" />
-</android.support.constraint.ConstraintLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
